# DapohCode

./: README.md  index.html  package-lock.json  package.json
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: agent.rs  chat.rs  cmd.rs  fs.rs  lib.rs  main.rs  web.rs
src/components/: ChatView.tsx  Composer.tsx  Header.tsx  MessageBubble.tsx  MessageContent.tsx  Rail.tsx  Select.tsx  SettingsView.tsx  StatusBar.tsx  ThinkingIndicator.tsx  ToolStep.tsx  icons.tsx
src/lib/: agentTools.ts  diff.ts  format.ts  highlight.ts  i18n.ts  presets.ts  tauri.ts
src/store/: app.ts
