[package]
name = "dapohcode"
version = "0.2.0"
description = "Desktop AI coding assistant"
authors = ["DapohCode"]
edition = "2021"

[lib]
name = "dapohcode_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.52.3", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
regex = "1"
